<resources>
    <string name="app_name">Movie Trailers</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_main_activity">Movie Trailers</string>
    <string name="image">Image thumbnail</string>
    <string name="action_settings">Title</string>
    <string name="select_movie">Select Movie</string>
    <string name="movie_title">Movie Title</string>
    <string name="movie_desc">Description</string>
    <string name="button_submit">Submit</string>
    <string name="add">Add New Trailer</string>
    <string name="addTrailer">New Trailer</string>
</resources>
